--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name": "WebXR API Emulator",
+  "name": "WebXR API Emulator for Oculus Quest",
   "short_name": "WebXR Emu",
   "version": "0.3.1",
   "minimum_chrome_version": "10.0",
   "devtools_page": "src/extension/devtools.html",
-  "description": "WebXR API Emulator",
-  "homepage_url": "https://github.com/MozillaReality/WebXR-emulator-extension",
-  "author": "Takahiro Aoyagi",
+  "description": "WebXR API Emulator for Oculus Quest",
+  "homepage_url": "https://github.com/illusioneering/WebXR-emulator-extension",
+  "author": "Evan Suma Rosenberg (forked from Takahiro Aoyagi)",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
